--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@ ul.task-list li input[type="checkbox"] {
     
 <!-- main -->
 <div class="quarto-about-jolla">
-  <img src="graycee.jpeg" class="about-image
+  <img src="oeltjen.jpeg" class="about-image
   round " style="height: 15em; width: 15em;">
  <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
@@ -129,23 +129,27 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-title-meta">
   </div>
 </header><main class="content" id="quarto-document-content">
-<p>Graycee Oeltjen is a student at the University of Nebraska Lincoln who is an Advertising and Public Relations major, as well as a Sports Media major.</p>
+<p>Graycee Oeltjen is a senior at the University of Nebraska Lincoln in the College of Journalism and Mass Communication. She is majoring in Advertising and Public Relations, as well as Sports Media. Graycee is from Broken Bow, Nebraska and has a passion for photography and graphic design. The UNL student is currently an intern at 93.7 The Ticket FM in Lincoln, Nebraska. Graycee creates graphics for The Ticket and creates content for the radio station’s social media platforms.</p>
 
 
 </main> 
   <hr class="about-sep">
    <div class="about-links">
-  <a href="https://twitter.com" class="about-link" rel="" target="">
-    <i class="bi bi-twitter"></i>
-     <span class="about-link-text">Twitter</span>
+  <a href="https://x.com/graycee__" class="about-link" rel="" target="">
+    <i class="bi bi-Twitter"></i>
+     <span class="about-link-text">X</span>
   </a>
-  <a href="https://linkedin.com" class="about-link" rel="" target="">
+  <a href="https://www.linkedin.com/in/graycee-oeltjen/" class="about-link" rel="" target="">
     <i class="bi bi-linkedin"></i>
      <span class="about-link-text">LinkedIn</span>
   </a>
-  <a href="https://github.com" class="about-link" rel="" target="">
+  <a href="https://github.com/grayceeoeltjen" class="about-link" rel="" target="">
     <i class="bi bi-github"></i>
      <span class="about-link-text">Github</span>
+  </a>
+  <a href="https://www.instagram.com/grayceeoeltjen/" class="about-link" rel="" target="">
+    <i class="bi bi-instagram"></i>
+     <span class="about-link-text">Instagram</span>
   </a>
 </div>
 </div>
