--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-2c7032fc800964d6d1245f4688488788.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-c693913c1c4a30ce2114e7465fc02aa7.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -196,7 +196,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YmlndGVu">bigten <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmNhYQ==">ncaa <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmVicmFza2E=">nebraska <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmNhYQ==">ncaa <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmVicmFza2E=">nebraska <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -210,15 +210,15 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYSUyQ2JpZ3Rlbg==" data-listing-date-sort="1648789200000" data-listing-file-modified-sort="1743548861189" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="19">
+<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYQ==" data-listing-date-sort="1744520400000" data-listing-file-modified-sort="1744692196656" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1514">
 <div class="thumbnail">
 <p><a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external"></a></p><a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/nebraska-basketball-home-court-advantage/image.png" class="thumbnail-image"></p>
+<p><img loading="lazy" src="./posts/nebraska-basketball-home-court-advantage/barchart Small.jpeg" class="thumbnail-image"></p>
 </a><p><a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external">Nebraska Men’s Basketball at PBA</a>
+<a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external">PBA Isn’t the Advantage Everyone Thinks It Is.</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external"></a>
@@ -233,18 +233,15 @@ basketball
 <div class="listing-category" onclick="window.quartoListingCategory('bmVicmFza2E='); return false;">
 nebraska
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('YmlndGVu'); return false;">
-bigten
-</div>
 </div>
 <div class="listing-description">
-<a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external">Why are teams so scared to play at Pinnacle Bank Arena? Is it different than any other homecourt advantage?</a>
+<a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external">Nebraska basketball fans have known for a long time that Pinnacle Bank Arena is more than just a venue- it’s an experience. The energetic atmosphere and the famous loyalty…</a>
 </div>
 </div>
 <div class="metadata">
 <a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external">
 <div class="listing-date">
-Apr 1, 2022
+Apr 13, 2025
 </div>
 <div class="listing-author">
 Graycee M. Oeltjen
