--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmNhYQ==">ncaa <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmVicmFza2E=">nebraska <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Zm9vdGJhbGw=">football <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmNhYQ==">ncaa <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmVicmFza2E=">nebraska <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmZs">nfl <span class="quarto-category-count">(1)</span></div><div class="category" data-category="cXVhcnRlcmJhY2s=">quarterback <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -210,7 +210,46 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYQ==" data-listing-date-sort="1744520400000" data-listing-file-modified-sort="1744692519402" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1514">
+<div class="quarto-post image-right" data-index="0" data-categories="bmZsJTJDZm9vdGJhbGwlMkNxdWFydGVyYmFjaw==" data-listing-date-sort="1746334800000" data-listing-file-modified-sort="1746418120607" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1412">
+<div class="thumbnail">
+<p><a href="./posts/jordan-love-vs-aaron-rodgers/index.html" class="no-external"></a></p><a href="./posts/jordan-love-vs-aaron-rodgers/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/jordan-love-vs-aaron-rodgers/chart.jpeg" class="thumbnail-image"></p>
+</a><p><a href="./posts/jordan-love-vs-aaron-rodgers/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/jordan-love-vs-aaron-rodgers/index.html" class="no-external">Is Jordan Love the future of the Packers?</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/jordan-love-vs-aaron-rodgers/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('bmZs'); return false;">
+nfl
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Zm9vdGJhbGw='); return false;">
+football
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('cXVhcnRlcmJhY2s='); return false;">
+quarterback
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/jordan-love-vs-aaron-rodgers/index.html" class="no-external">For over a decade, Aaron Rodgers was the face of the Green Bay Packers, leading the team in many monumental victories including a Super Bowl win against the Pittsburgh…</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/jordan-love-vs-aaron-rodgers/index.html" class="no-external">
+<div class="listing-date">
+May 4, 2025
+</div>
+<div class="listing-author">
+Graycee M. Oeltjen
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNuZWJyYXNrYQ==" data-listing-date-sort="1744520400000" data-listing-file-modified-sort="1744692519402" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1514">
 <div class="thumbnail">
 <p><a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external"></a></p><a href="./posts/nebraska-basketball-home-court-advantage/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/nebraska-basketball-home-court-advantage/barchart Small.jpeg" class="thumbnail-image"></p>
